--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     background-position: center;
     background-size: cover;
     width: 250px;
-    height: 380px;
+    height: 400px;
     background:#fff;
 
   }
@@ -31,3 +31,100 @@ body {
   p{
       text-align: center;
   }
+  .per-sims{
+    width: 402px;
+    height: 319px;
+    margin-top: -319px;
+    margin-left: -72px;
+    display:none;
+  }
+  .plux{
+    width: 402px;
+    height: 319px;
+    margin-top: -319px;
+    margin-left: -82px;
+    display:none;
+  }
+  .labocki{
+    width: 402px;
+    height: 319px;
+    margin-top: -319px;
+    margin-left: -69px;
+    display:none;
+    
+  }
+  .sorok-sims{
+    margin-top: -320px;
+    height: 316px;
+    width: 382px;
+    margin-left: -65px;
+    display: none;
+  }
+
+  .shastic-sims{
+    width: 379px;
+    height: 300px;
+    position: absolute;
+    left: -62px;
+    top: 0px;
+    display: none;
+  }
+  .pavlova-sims{
+    width: 379px;
+    height: 300px;
+    position: absolute;
+    left: -62px;
+    top: 0px;
+    display: none;
+  }
+  .yurcha-sims{
+    margin-top: -320px;
+    height: 316px;
+    width: 354px;
+    margin-left: -47px;
+    display: none;
+  }
+  .sherb-sims{
+    margin-top: -320px;
+    height: 316px;
+    width: 354px;
+    margin-left: -47px;
+    display:none;
+  }
+  .gvaeva-sims{
+    margin-top: -320px;
+    height: 316px;
+    width: 317px;
+    margin-left: -29px;
+    display: none;
+  }
+  .sharkova-sims{
+    margin-top: -320px;
+    height: 316px;
+    width: 317px;
+    margin-left: -35px;
+    display: none;
+  }
+  .zhurko-sims{
+    margin-top: -320px;
+    height: 316px;
+    width: 351px;
+    margin-left: -49px;
+    display: none;
+  }
+  .none{
+    display:none;
+  }
+  .block{
+    display:block;
+  }
+  .swiper-slide{
+    overflow: hidden;
+  }
+  .desr{
+    margin-top: 30px;
+  }
+  .sorokoviikk{
+    overflow: hidden;
+  }
+  
